force-app/main/default/objects/Inventory_Itemm__c/Inventory_Itemm__c.object-meta.xml
<CustomObject>
    <label>Inventory Itemm</label>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Inventory Itemm Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Itemms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>