force-app/main/default/objects/Inventory_Itemm__c/fields/Last_Restocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Restocked_Date__c</fullName>
    <label>Last Restocked Date</label>
    <type>Date</type>
</CustomField>