force-app/main/default/objects/Inventory_Itemm__c/fields/Part_Category__c.field-meta.xml
<CustomField>
    <fullName>Part_Category__c</fullName>
    <label>Part Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Filters</fullName>
            </value>
            <value>
                <fullName>Fluids</fullName>
            </value>
            <value>
                <fullName>Tyres</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>