force-app/main/default/objects/Inventory_Itemm__c/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quantity__c</fullName>
    <label>Stock Quantity</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>