force-app/main/default/objects/Inventory_Itemm__c/fields/Supplier_Part_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Part_Code__c</fullName>
    <label>Supplier Part Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>