force-app/main/default/objects/Inventory_Itemm__c/validationRules/Reorder_Level_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Reorder_Level_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Reorder_Level__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Reorder_Level__c</errorDisplayField>
    <errorMessage>Reorder Level cannot be negative</errorMessage>
</ValidationRule>