force-app/main/default/objects/Inventory_Itemm__c/validationRules/Selling_Price_Below_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Selling_Price_Below_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>Selling_Price__c &lt; Unit_Cost__c</errorConditionFormula>
    <errorDisplayField>Selling_Price__c</errorDisplayField>
    <errorMessage>Selling price cannot be lower than unit cost</errorMessage>
</ValidationRule>