force-app/main/default/objects/Inventory_Itemm__c/validationRules/Selling_Price_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Selling_Price_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Selling_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Selling_Price__c</errorDisplayField>
    <errorMessage>Selling Price cannot be negative</errorMessage>
</ValidationRule>