force-app/main/default/objects/Inventory_Itemm__c/validationRules/Stock_Quantity_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_Quantity_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Stock_Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Stock_Quantity__c</errorDisplayField>
    <errorMessage>Stock Quantity cannot be negative</errorMessage>
</ValidationRule>