force-app/main/default/objects/Inventory_Itemm__c/validationRules/Unit_Cost_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Cost_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Cost__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Cost__c</errorDisplayField>
    <errorMessage>Unit cost cannot be negative</errorMessage>
</ValidationRule>